--- a/sportmates_frontend/app/src/main/res/layout/activity_registration.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_registration.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constLayout1"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="6dp">
+    android:layout_height="match_parent">
+
 
     <TextView
+        android:id="@+id/events_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:padding="16dp"
-        android:text="@string/register_btn"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/gradient_background"
+        android:paddingBottom="18dp"
+        android:paddingTop="18dp"
+        android:text="@string/button_register"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
 
     <EditText
+
         android:id="@+id/reg_lastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,8 +30,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="68dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/regist_lastname"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,8 +45,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/regist_firstname"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,8 +61,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="164dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/profile_username"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,8 +76,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="208dp"
         android:ems="10"
-        android:inputType="textVisiblePassword"
         android:hint="@string/regist_password"
+        android:inputType="textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,8 +91,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="252dp"
         android:ems="10"
-        android:inputType="textEmailAddress"
         android:hint="@string/profile_email"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +106,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="296dp"
         android:ems="10"
-        android:inputType="textPhonetic"
         android:hint="@string/profile_phone_number"
+        android:inputType="textPhonetic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,8 +121,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="340dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/profile_locale"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,8 +136,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="384dp"
         android:ems="10"
-        android:inputType="text"
         android:hint="1990-01-01"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,12 +166,12 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/regist_male"
             android:checked="true"
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/regist_male"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="onRadioButtonClicked"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RadioButton
             android:id="@+id/radioButton_female"
@@ -181,24 +180,26 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:onClick="onRadioButtonClicked"
             android:text="@string/regist_female"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="onRadioButtonClicked"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </RadioGroup>
 
     <Button
+        android:id="@+id/btnRegistration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="490dp"
-        android:ems="8"
-        android:onClick="onClick"
-        android:text="@string/register_btn"
-        android:textAllCaps="false"
+        android:background="@color/colorPrimary"
+        android:textSize="14sp"
+        android:padding="10dp"
+        android:text="@string/button_confirm"
+        android:textColor="@color/buttonTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
